--- a/image.yaml
+++ b/image.yaml
@@ -37,7 +37,7 @@ packages:
   - python
   - python-devel
 artifacts:
-  - url: http://ftp.unicamp.br/pub/apache/zeppelin/zeppelin-0.8.0/zeppelin-0.8.0-bin-netinst.tgz
+  - url: http://archive.apache.org/dist/zeppelin/zeppelin-0.7.3/zeppelin-0.7.3-bin-netinst.tgz
     md5: 5159770bc63acf5c1fcb7b6fda693bb7
 run:
   user: 185
